feat(api): finish auth controller
