# libs/api/auth/src/lib/entities/student.entity.ts
@@ -1,14 +1,10 @@
 export class Student {
   userId!: number;
   studentNumber!: string;
-  name!: string;
-  email!: string;
-  department!: string;
-  major!: string;
-  year!: number;
   role!: string;
 
   constructor(data: Student) {
     Object.assign(this, data);
+    this.studentNumber = data.studentNumber.toUpperCase();
   }
 }
